--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "title": "smoothscroll",
-  "name": "smoothscroll-polyfill",
+  "name": "@kuzorov/smoothscroll-polyfill",
   "description": "Smooth Scroll behavior polyfill",
-  "version": "0.4.4",
+  "version": "0.4.5",
   "author": {
     "name": "Dustan Kasten",
     "email": "dustan.kasten@gmail.com",
@@ -32,7 +32,6 @@
   ],
   "scripts": {
     "lint": "eslint {src,test}/**/*.js",
-    "test": "ava test/smoothscroll.test.js --verbose",
     "posttest": "yarn lint",
     "precommit": "lint-staged",
     "prebuild": "npm test",
